# davit

./: .#ChangeLog  .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  REPORT_TESTS.txt  acinclude.m4  autogen.sh  build_debs.sh.in  build_win32.bat  configure.ac  configure.in  davit-sample.ini  davit.conf-sample  davit.ini  davit.ism  davit.pro  davit.spec.in  dvt-bin.conf.in  kdmrc-example
conf/: Makefile.am  davit-sample.conf
davit/: Makefile.am  activity_report.cpp  add_affiliate.cpp  add_affiliate.h  add_program.cpp  add_program.h  add_provider.cpp  add_provider.h  add_remark.cpp  add_remark.h  add_user.cpp  add_user.h  addedprograms_report.cpp  affidavit_picker.cpp  affidavit_picker.h  affidavit_report.cpp  affidavitaffiliatereport.cpp  affidavitprogramreport.cpp  affiliate_report.cpp  affiliatelistmodel.cpp  affiliatelistmodel.h  affiliatesbymarket_report.cpp  affiliatesbyprogram_report.cpp  airinglistmodel.cpp  airinglistmodel.h  algocombobox.cpp  algocombobox.h  arbitron_report.cpp  change_password.cpp  change_password.h  contact.cpp  contact.h  contactlistmodel.cpp  contactlistmodel.h  contactlistview.cpp  contactlistview.h  createdb.cpp  createdb.h  datedialog.cpp  datedialog.h  (+114 more)
debian/: Makefile.am  changelog.src  control.src  copyright  davit-core.postinst  davit-core.postrm  davit-gui.postinst  davit-web.postinst  davit-web.prerm  rules
debian/source/: Makefile.am
docs/: Makefile.am  env_var.txt  tables.txt
docs/manpages/: Makefile.am  davit.conf.xml  dvtdbmgr.xml  dvtstamp.xml
helpers/: Makefile.am
icons/: Makefile.am  davit-22x22.xpm  network.xpm  program.xpm  provider.xpm  report.xpm
lib/: Makefile.am  algocombobox.cpp  algocombobox.h  change_password.cpp  change_password.h  dvt.cpp  dvt.h  dvtcmdswitch.cpp  dvtcmdswitch.h  dvtconf.cpp  dvtconf.h  dvtconfig.cpp  dvtconfig.h  dvtdatedialog.cpp  dvtdatedialog.h  dvtdatepicker.cpp  dvtdatepicker.h  dvtdb.cpp  dvtdb.h  dvtdialog.cpp  dvtdialog.h  dvtfeed.cpp  dvtfeed.h  dvtfontengine.cpp  dvtfontengine.h  dvtimport.cpp  dvtimport.h  dvtinstancemonitor.cpp  dvtinstancemonitor.h  dvtlabel.cpp  dvtlabel.h  dvtlistselector.cpp  dvtlistselector.h  dvtlistviewitem.cpp  dvtlistviewitem.h  dvtmail-win32.cpp  dvtmail.cpp  dvtmail.h  dvtprofile.cpp  dvtprofile.h  (+41 more)
scripts/: Makefile.am  add_mysql_user.sh  xfer_contacts.pl
utils/: Makefile.am
utils/dvt_import/: .gitignore  Makefile.am  dvt_import.cpp  dvt_import.h
utils/dvtdbcheck/: .gitignore  Makefile.am  dvtdbcheck.cpp  dvtdbcheck.h
utils/dvtdbmgr/: Makefile.am  check.cpp  create.cpp  dvtdbmgr.cpp  dvtdbmgr.h  modify.cpp
utils/dvtstamp/: .gitignore  Makefile.am  dvtstamp.cpp  dvtstamp.h
utils/dvtwgmgr/: Makefile.am  dvtwgmgr.cpp  dvtwgmgr.h
utils/vnc/: .gitignore  Makefile.am  davit-config  davit.xinitrc.in  start_davit.sh.in
web/: Makefile.am
web/davit/: Makefile.am  davit.cpp  davit.h
xdg/: Makefile.am  davit.desktop
